--- a/graphql/graphql-odev-1/package.json
+++ b/graphql/graphql-odev-1/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "apollo-server": "^3.9.0",
-    "apollo-server-core": "^3.9.0"
+    "apollo-server-core": "^3.9.0",
+    "graphql": "^16.5.0"
   }
 }
