--- a/graphql/graphql-comments/package.json
+++ b/graphql/graphql-comments/package.json
@@ -16,7 +16,10 @@
   "dependencies": {
     "apollo-server": "^3.9.0",
     "apollo-server-core": "^3.9.0",
-    "graphql": "^16.5.0",
+    "dotenv": "^16.0.1",
+    "graphql-redis-subscriptions": "^2.4.2",
+    "graphql-yoga": "^1.18.3",
+    "ioredis": "^5.1.0",
     "nanoid": "^4.0.0"
   }
 }
